Fixed an issue where the submit button was not aligned

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -398,6 +398,7 @@ section p {
   color: var(--mainColor);
   font-family: "Irish Grover", cursive;
   font-size: 4rem;
+  text-align: center;
 }
 /*====================================================================================================*/
 /*===========================================[ High Scores ]=============================================*/
